--- a/.env.example
+++ b/.env.example
@@ -30,10 +30,12 @@ REDIS_MAX_CONNECTIONS=10
 REDIS_TTL=7200
 
 # === Elasticsearch Configuration ===
+ELASTICSEARCH_URL=http://elasticsearch:9200
+ELASTIC_USER=elastic
 ELASTIC_PASSWORD=changeme
 
 # === Milvus Configuration ===
-MILVUS_HOST=localhost
+MILVUS_HOST=milvus-standalone
 MILVUS_PORT=19530
 
 # === ClickHouse Configuration ===
@@ -43,11 +45,22 @@ CLICKHOUSE_USER=clickhouse
 CLICKHOUSE_PASSWORD=clickhouse
 
 # === MinIO Configuration ===
-MINIO_HOST=localhost
 MINIO_API_PORT=9050
 MINIO_CONSOLE_PORT=9051
 MINIO_ROOT_USER=minio
 MINIO_ROOT_PWD=miniosecret
+
+# === Langfuse Configuration (use container names when deploying with Docker) ===
+LANGFUSE_SECRET_KEY=sk-lf-your-secret-key-here
+LANGFUSE_PUBLIC_KEY=pk-lf-your-public-key-here
+LANGFUSE_HOST=http://langfuse-web:3000
+
+# === LLM Provider API Keys ===
+OPENAI_API_KEY=your_openai_api_key_here
+ANTHROPIC_API_KEY=your_anthropic_api_key_here
+GOOGLE_API_KEY=your_google_api_key_here
+DEEPSEEK_API_KEY=your_deepseek_api_key_here
+OPENROUTER_API_KEY=your_openrouter_api_key_here
 
 # === Multi-LLM Configuration ===
 DEFAULT_LLM_PROVIDER=openai
@@ -65,3 +78,7 @@ LOG_FILE=logs/mas.log
 
 # === Performance ===
 CACHE_TTL=3600
+
+# === Deployment ===
+REGISTRY_URL=registry.gitlab.com
+CALLBACK_URL=http://your-callback-url.com
