--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -1,6 +1,46 @@
 name: mas-observe
 
 services:
+  mas:
+    build:
+      context: ./api
+      dockerfile: Dockerfile
+    image: ${REGISTRY_URL}/api:latest
+    ports:
+      - "8000:8000"
+    environment:
+      - APP_KEY=${APP_KEY}
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
+      - GOOGLE_API_KEY=${GOOGLE_API_KEY}
+      - DEEPSEEK_API_KEY=${DEEPSEEK_API_KEY}
+      - OPENROUTER_API_KEY=${OPENROUTER_API_KEY}
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT:-5432}
+      - DB_NAME=${DB_NAME}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PWD=${POSTGRES_PWD}
+      - REDIS_HOST=${REDIS_HOST}
+      - REDIS_PORT=${REDIS_PORT:-6379}
+      - REDIS_USERNAME=${REDIS_USERNAME:-}
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
+      - MILVUS_HOST=${MILVUS_HOST}
+      - MILVUS_PORT=${MILVUS_PORT:-19530}
+      - ELASTICSEARCH_URL=${ELASTICSEARCH_URL}
+      - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
+      - LANGFUSE_SECRET_KEY=${LANGFUSE_SECRET_KEY}
+      - LANGFUSE_PUBLIC_KEY=${LANGFUSE_PUBLIC_KEY}
+      - LANGFUSE_HOST=${LANGFUSE_HOST}
+      - CALLBACK_URL=${CALLBACK_URL}
+    depends_on:
+      - postgres
+      - redis
+      - elasticsearch
+      - milvus-standalone
+      - langfuse-web
+      - temporal
+    restart: unless-stopped
+
   langfuse-web:
     build:
       dockerfile: ./frontend/Dockerfile
