--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,65 +1,146 @@
+name: mas-observe
+
 services:
   # Main MAS application
-  mas-agent:
-    build:
-      context: ..
-      dockerfile: docker/Dockerfile
+  mas:
+    image: ${REGISTRY_URL}/api:latest
     ports:
       - "8000:8000"
     environment:
+      - APP_KEY=${APP_KEY}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
+      - GOOGLE_API_KEY=${GOOGLE_API_KEY}
+      - DEEPSEEK_API_KEY=${DEEPSEEK_API_KEY}
+      - OPENROUTER_API_KEY=${OPENROUTER_API_KEY}
       - DB_HOST=${DB_HOST}
-      - DB_PORT=${DB_PORT}
+      - DB_PORT=${DB_PORT:-5432}
       - DB_NAME=${DB_NAME}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PWD=${POSTGRES_PWD}
+      - REDIS_HOST=${REDIS_HOST}
+      - REDIS_PORT=${REDIS_PORT:-6379}
+      - REDIS_USERNAME=${REDIS_USERNAME:-}
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
+      - MILVUS_HOST=${MILVUS_HOST}
+      - MILVUS_PORT=${MILVUS_PORT:-19530}
+      - ELASTICSEARCH_URL=${ELASTICSEARCH_URL}
+      - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
+      - LANGFUSE_SECRET_KEY=${LANGFUSE_SECRET_KEY}
+      - LANGFUSE_PUBLIC_KEY=${LANGFUSE_PUBLIC_KEY}
+      - LANGFUSE_HOST=${LANGFUSE_HOST}
+      - CALLBACK_URL=${CALLBACK_URL}
     depends_on:
-      - milvus-standalone
-      - elasticsearch
+      - postgres
       - redis
-    volumes:
-      - ../api:/app/api
-      - ../infra:/app/infra
-      - ../models:/app/models
-      - ../scripts:/app/scripts
-      - ../config:/app/config
-    networks:
-      - mas-network
+      - elasticsearch
+      - milvus-standalone
+      - langfuse-web
+      - temporal
+    restart: unless-stopped
+
+  langfuse-web:
+    image: ${REGISTRY_URL}/frontend:latest
+    depends_on: &langfuse-depends-on
+      - postgres
+      - minio
+      - redis
+      - clickhouse
+    ports:
+      - "3000:3000"
+    environment: &langfuse-web-env
+      DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PWD}@${DB_HOST}:${DB_PORT}/observe
+      NEXTAUTH_SECRET: mysecret
+      SALT: mysalt
+      ENCRYPTION_KEY: "0000000000000000000000000000000000000000000000000000000000000000" # generate via `openssl rand -hex 32`
+      NEXTAUTH_URL: http://localhost:3000
+      TELEMETRY_ENABLED: ${TELEMETRY_ENABLED:-false}
+      LANGFUSE_ENABLE_EXPERIMENTAL_FEATURES: ${LANGFUSE_ENABLE_EXPERIMENTAL_FEATURES:-false}
+      LANGFUSE_INIT_ORG_ID: ${LANGFUSE_INIT_ORG_ID:-}
+      LANGFUSE_INIT_ORG_NAME: ${LANGFUSE_INIT_ORG_NAME:-}
+      LANGFUSE_INIT_PROJECT_ID: ${LANGFUSE_INIT_PROJECT_ID:-}
+      LANGFUSE_INIT_PROJECT_NAME: ${LANGFUSE_INIT_PROJECT_NAME:-}
+      LANGFUSE_INIT_PROJECT_PUBLIC_KEY: ${LANGFUSE_INIT_PROJECT_PUBLIC_KEY:-}
+      LANGFUSE_INIT_PROJECT_SECRET_KEY: ${LANGFUSE_INIT_PROJECT_SECRET_KEY:-}
+      LANGFUSE_INIT_USER_EMAIL: ${LANGFUSE_INIT_USER_EMAIL:-}
+      LANGFUSE_INIT_USER_NAME: ${LANGFUSE_INIT_USER_NAME:-}
+      LANGFUSE_INIT_USER_PASSWORD: ${LANGFUSE_INIT_USER_PASSWORD:-}
+      CLICKHOUSE_MIGRATION_URL: ${CLICKHOUSE_MIGRATION_URL:-clickhouse://clickhouse:9000}
+      CLICKHOUSE_URL: ${CLICKHOUSE_URL:-http://clickhouse:8123}
+      CLICKHOUSE_USER: ${CLICKHOUSE_USER:-clickhouse}
+      CLICKHOUSE_PASSWORD: ${CLICKHOUSE_PASSWORD:-clickhouse}
+      CLICKHOUSE_CLUSTER_ENABLED: ${CLICKHOUSE_CLUSTER_ENABLED:-false}
+      LANGFUSE_S3_EVENT_UPLOAD_BUCKET: ${LANGFUSE_S3_EVENT_UPLOAD_BUCKET:-huanmu}
+      LANGFUSE_S3_EVENT_UPLOAD_REGION: ${LANGFUSE_S3_EVENT_UPLOAD_REGION:-us-east-1}
+      LANGFUSE_S3_EVENT_UPLOAD_ACCESS_KEY_ID: ${LANGFUSE_S3_EVENT_UPLOAD_ACCESS_KEY_ID:-minio}
+      LANGFUSE_S3_EVENT_UPLOAD_SECRET_ACCESS_KEY: ${LANGFUSE_S3_EVENT_UPLOAD_SECRET_ACCESS_KEY:-miniosecret}
+      LANGFUSE_S3_EVENT_UPLOAD_ENDPOINT: ${LANGFUSE_S3_EVENT_UPLOAD_ENDPOINT:-http://minio:9000}
+      LANGFUSE_S3_EVENT_UPLOAD_FORCE_PATH_STYLE: ${LANGFUSE_S3_EVENT_UPLOAD_FORCE_PATH_STYLE:-true}
+      LANGFUSE_S3_EVENT_UPLOAD_PREFIX: ${LANGFUSE_S3_EVENT_UPLOAD_PREFIX:-events/}
+      REDIS_HOST: ${REDIS_HOST:-redis}
+      REDIS_PORT: ${REDIS_PORT:-6379}
+      REDIS_PASSWORD: ${REDIS_PASSWORD:-myredissecret}
+      REDIS_TLS_ENABLED: ${REDIS_TLS_ENABLED:-false}
+      REDIS_TLS_CA: ${REDIS_TLS_CA:-/certs/ca.crt}
+      REDIS_TLS_CERT: ${REDIS_TLS_CERT:-/certs/redis.crt}
+      REDIS_TLS_KEY: ${REDIS_TLS_KEY:-/certs/redis.key}
+    restart: always
+    healthcheck:
+      test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://$(hostname):3000/api/public/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+  langfuse-worker:
+    image: ${REGISTRY_URL}/worker:latest
+    depends_on: *langfuse-depends-on
+    environment:
+      <<: *langfuse-web-env
+    restart: always
+    healthcheck:
+      test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:3030/api/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   clickhouse:
-    container_name: clickhouse
-    image: clickhouse/clickhouse-server
+    image: ${REGISTRY_URL}/clickhouse-server:latest
     user: "101:101"
     environment:
       CLICKHOUSE_DB: ${CLICKHOUSE_DB:-mas}
       CLICKHOUSE_USER: ${CLICKHOUSE_USER:-clickhouse}
       CLICKHOUSE_PASSWORD: ${CLICKHOUSE_PASSWORD:-clickhouse}
-    ports:
-      - "${CLICKHOUSE_PORT:-8123}:8123"
-      - "9000:9000"
     volumes:
       - clickhouse_data:/var/lib/clickhouse
-    networks:
-      - mas-network
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8123/ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
-  # Elasticsearch for memory storage
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.12.0
+    image: ${REGISTRY_URL}/elasticsearch:9.2.0
     environment:
+      - ELASTIC_PASSWORD=${ELASTIC_PASSWORD:-changeme}
       - discovery.type=single-node
-      - xpack.security.enabled=false
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-    ports:
-      - "9200:9200"
+      - bootstrap.memory_lock=true
+      - xpack.security.enabled=true
+      - xpack.security.http.ssl.enabled=false
+      - xpack.license.self_generated.type=basic
+      - cluster.routing.allocation.disk.threshold_enabled=true
+      - cluster.routing.allocation.disk.watermark.low=512mb
+      - cluster.routing.allocation.disk.watermark.high=256mb
+      - cluster.routing.allocation.disk.watermark.flood_stage=128mb
+    mem_limit: 1g
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
     volumes:
-      - elasticsearch_data:/usr/share/elasticsearch/data
-    networks:
-      - mas-network
+      - es_data:/usr/share/elasticsearch/data
 
-  # Milvus vector database for RAG operations (product search, recommendations)
   etcd:
-    container_name: milvus-etcd
-    image: quay.io/coreos/etcd:v3.5.5
+    image: ${REGISTRY_URL}/etcd:v3.6.5
     environment:
       - ETCD_AUTO_COMPACTION_MODE=revision
       - ETCD_AUTO_COMPACTION_RETENTION=1000
@@ -67,20 +148,43 @@ services:
       - ETCD_SNAPSHOT_COUNT=50000
     volumes:
       - etcd_data:/etcd
-    command: etcd -advertise-client-urls=http://127.0.0.1:2379 -listen-client-urls http://0.0.0.0:2379 --data-dir /etcd
-    networks:
-      - mas-network
+    command: etcd -advertise-client-urls=http://etcd:2379 -listen-client-urls http://0.0.0.0:2379 --data-dir /etcd
+    healthcheck:
+      test: ["CMD", "etcdctl", "endpoint", "health"]
+      interval: 30s
+      timeout: 20s
+      retries: 3
+
+  milvus-standalone:
+    image: ${REGISTRY_URL}/milvus:v2.6.4
+    command: ["milvus", "run", "standalone"]
+    # security_opt:
+    # - seccomp:unconfined
+    environment:
+      ETCD_ENDPOINTS: etcd:2379
+      MINIO_ADDRESS: minio:9000
+      MINIO_ACCESS_KEY_ID: ${MINIO_ROOT_USER}
+      MINIO_SECRET_ACCESS_KEY: ${MINIO_ROOT_PWD}
+      MQ_TYPE: woodpecker
+    volumes:
+      - milvus_data:/var/lib/milvus
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9091/healthz"]
+      interval: 30s
+      start_period: 90s
+      timeout: 20s
+      retries: 3
+    depends_on:
+      - etcd
+      - minio
 
   minio:
-    container_name: minio
-    image: minio/minio
-    command: ["sh", "-c", "mkdir -p /data/huanmu && minio server --address :9000 --console-address :9001 /data"]
+    image: ${REGISTRY_URL}/minio:latest
+    entrypoint: sh
+    command: -c "mkdir -p /data/huanmu && minio server --address ':9000' --console-address ':9001' /data"
     environment:
       MINIO_ROOT_USER: ${MINIO_ROOT_USER:-minio}
       MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PWD:-miniosecret}
-    ports:
-      - "${MINIO_API_PORT:-9050}:9000"
-      - "${MINIO_CONSOLE_PORT:-9051}:9001"
     volumes:
       - minio_data:/data
     healthcheck:
@@ -88,50 +192,59 @@ services:
       interval: 30s
       timeout: 20s
       retries: 3
-    networks:
-      - mas-network
 
-  milvus-standalone:
-    container_name: milvus-standalone
-    image: milvusdb/milvus:v2.3.0
-    command: ["milvus", "run", "standalone"]
+  postgres:
+    image: ${REGISTRY_URL}/postgres:18-alpine
     environment:
-      ETCD_ENDPOINTS: etcd:2379
-      MINIO_ADDRESS: minio:9000
+      POSTGRES_DB: ${DB_NAME:-mas}
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PWD:-your-secure-password-here}
     volumes:
-      - milvus_data:/var/lib/milvus
-    ports:
-      - "19530:19530"
-      - "9091:9091"
-    depends_on:
-      - "etcd"
-      - "minio"
-    networks:
-      - mas-network
+      - postgres_data:/var/lib/postgresql/data
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres} -d ${DB_NAME:-mas}"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
-  # Redis for session management
+  temporal:
+    image: ${REGISTRY_URL}/temporal:latest
+    depends_on:
+      - langfuse-web
+      - langfuse-worker
+      - elasticsearch
+    environment:
+      - DB=postgres12
+      - DB_PORT=${DB_PORT:-5432}
+      - POSTGRES_USER=${POSTGRES_USER:-postgres}
+      - POSTGRES_PWD=${POSTGRES_PWD:-your-secure-password-here}
+      - POSTGRES_SEEDS=${DB_HOST}
+      - ENABLE_ES=true
+      - ES_USER=${ELASTIC_USER:-elastic}
+      - ES_PWD=${ELASTIC_PASSWORD:-changeme}
+      - ES_SEEDS=elasticsearch
+      - TEMPORAL_ADDRESS=temporal:7233
+
   redis:
-    container_name: redis
-    image: redis
+    image: ${REGISTRY_URL}/redis:8-alpine
     environment:
       REDIS_PASSWORD: ${REDIS_PASSWORD:-myredissecret}
-    ports:
-      - "${REDIS_PORT:-6379}:6379"
     volumes:
       - redis_data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
     command: --requirepass ${REDIS_PASSWORD:-myredissecret}
     restart: always
-    networks:
-      - mas-network
 
 volumes:
-  elasticsearch_data:
-  etcd_data:
-  minio_data:
-  milvus_data:
-  redis_data:
   clickhouse_data:
-
-networks:
-  mas-network:
-    driver: bridge 
+  redis_data:
+  postgres_data:
+  minio_data:
+  es_data:
+  etcd_data:
+  milvus_data:
